--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -3,18 +3,17 @@
 
 
 {% block content %}
-
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
     <div class="card mt-5">
-
-
       <div class="card-body">
         <div class="card-title py-3">
           <h4>Register for a free account</h4>
         </div>
         <form action="{% url 'register' %}" method="post">
+          {% csrf_token %}
+          {% include 'partials/_messages.html' %}
           <div class="form-group">
             <input type="text" name="username" placeholder="username" id="usernameField" value="{{fieldValues.username}}" class="form-control form-control-sm"/>
           </div>
