--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Expenses List</h1>
-<ul class="list-group">
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-    <li class="list-group-item">Brought Bear</li>
-</ul>
+<div class="container">
+    {% include 'partials/_messages.html' %}
+    <h1>Expenses List</h1>
+    <ul class="list-group">
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+        <li class="list-group-item">Brought Bear</li>
+    </ul>
+</div>
 {% endblock content %}
