--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,16 +1,65 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-<div class="container">
-    {% include 'partials/_messages.html' %}
-    <h1>Expenses List</h1>
-    <ul class="list-group">
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-        <li class="list-group-item">Brought Bear</li>
-    </ul>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-10">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="">Expenses</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            My Expenses
+          </li>
+        </ol>
+      </nav>
+    </div>
+    <div class="col-md-2">
+      <a href="{% url 'add-expenses'%}" class="btn btn-primary">Add Expense</a>
+    </div>
+  </div>
+
+  <div class="container">
+    {% include 'partials/_messages.html' %} {% if expenses.count %}
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4">
+        <div class="form-group">
+          <input type="text" class="form-control" id="searchField" placeholder="Search">
+        </div>
+      </div>
+    </div>
+<div class="app-table">
+  <table class="table table-stripped table-hover">
+    <thead>
+      <tr>
+        <th>Amount ({{currency}})</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Date</th>
+        <th>Edit Expense</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for expense in page_obj%}
+      <tr>
+        <td>{{expense.amount}}</td>
+        <td>{{expense.category}}</td>
+        <td>{{expense.description}}</td>
+        <td>{{expense.date}}</td>
+        <td><a href="{% url 'expense-edit' expense.id  %}" class="btn btn-secondary btn-sm">Edit</a></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
+  <div class="pagination-container">
+    {% endif %}
+  </div>
+</div>
+</div>
+
+<script src="{% static 'js/searchExpenses.js' %}"></script>
 {% endblock content %}
