--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -55,8 +55,25 @@
     </tbody>
   </table>
 </div>
+<p class="no-results" style="display: none;">No results </p>
+<div class="table-output">
+  <table class="table table-stripped table-hover">
+    <thead>
+      <tr>
+        <th>Amount ({{currency}})</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Date</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody class="table-body">
+      
+    </tbody>
+  </table>
+</div>
 
-    <div class="pagination-container">
+  <div class="pagination-container">
       <div class="">
         Showing page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}
       </div>
@@ -77,4 +94,5 @@
 </div>
 
 <script src="{% static 'js/searchExpenses.js' %}"></script>
+</script>
 {% endblock content %}
