--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -3,13 +3,10 @@
 
 
 {% block content %}
-
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
     <div class="card mt-5">
-
-
       <div class="card-body">
         <div class="card-title py-3">
           <h4>Login to your  account</h4>
@@ -20,28 +17,18 @@
           {% include 'partials/_messages.html' %}
           <div class="form-group">
             <input
-              type="text"
-              name="username"
-              placeholder="username"
-              id="usernameField"
-              value="{{fieldValues.username}}"
-              class="form-control form-control-sm"
-            />
+              type="text" name="username" placeholder="username" id="usernameField" value="{{fieldValues.username}}" class="form-control form-control-sm"/>
           </div>
           <div class="form-group">
-            <input
-              type="password"
-              name="password"
-              placeholder="Password"
-              class="form-control form-control-sm"
-              id="passwordField"
-            />
+            <input type="password" name="password" placeholder="Password" class="form-control form-control-sm" id="passwordField"/>
           </div>
           <input type="submit" value="Login" class="btn btn-block btn-primary submit-btn" />
         </form>
-
+        <div class="container">
+          <span class="text-lead lead">Don't have an account?&nbsp;<a href="{% url 'register' %}">Register</a></span><br>
+          <span class="text-lead lead">Forget Password?&nbsp;<a href="{% url 'reset-password' %}">Reset it</a></span>
+        </div>
       </div>
-
       </div>
     </div>
   </div>
@@ -49,5 +36,4 @@
 </div>
 
 <script src="{% static 'js/register.js' %}"></script>
-
 {% endblock content %}
